# dementia-research-app

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  config.py  main.py  models.py
app/services/: cache.py  huggingface.py  research.py  research_old.py  translator.py
scripts/: __init__.py  monthly_update.py
static/: app.js  index.html  index_multilang.html
static/languages/de/: index.html
static/languages/de/archive/: index.html
static/languages/de/archive/2025-10/: index.html
static/languages/en/: index.html
static/languages/en/archive/: index.html
static/languages/en/archive/2025-10/: index.html
static/languages/es/: index.html
static/languages/es/archive/: index.html
static/languages/es/archive/2025-10/: index.html
static/languages/fr/: index.html
static/languages/fr/archive/: index.html
static/languages/fr/archive/2025-10/: index.html
static/languages/hr/: index.html
static/languages/hr/archive/: index.html
static/languages/hr/archive/2025-10/: index.html
static/languages/it/: index.html
static/languages/it/archive/: index.html
static/languages/it/archive/2025-10/: index.html
templates/: archive_page.html  language_page.html
