[project]
name = "dementia-page"
version = "0.1.0"
description = "Dementia Research and Treatments Information - A web application for summarizing and translating dementia research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cachetools>=5.3.2",
    "deep-translator>=1.11.4",
    "jinja2>=3.1.2",
    "schedule>=1.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
